package TypeData;

public class Energy {
    Life life;

    public Energy(Life life){
        this.life = life;
    }
}
