package TypeData;

public class Speed {
    int speed;

    public Speed(int speed){
        this.speed = speed;
    }
}
