package edu.fiuba.algo3.Turn;

public interface Turn {
    void executeTurn();
}
